--- a/manifest.json
+++ b/manifest.json
@@ -1,25 +1,39 @@
 {
   "name": "Sistem Presensi Kampus",
   "short_name": "Presensi",
-  "id": "./",
+  "description": "Aplikasi Sistem Presensi Kampus berbasis Web",
   "start_url": "./index.php",
   "scope": "./",
   "display": "standalone",
-  "background_color": "#ffffff",
+  "background_color": "#0066cc",
   "theme_color": "#0066cc",
   "orientation": "portrait",
+  "categories": ["education", "utilities"],
+  "prefer_related_applications": false,
   "icons": [
     {
-      "src": "includes/icon.png",
+      "src": "./includes/icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "includes/icon.png",
+      "src": "./includes/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "./includes/icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
+    },
+    {
+      "src": "./includes/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ]
 }
